--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <div id="mainContainer">
+        <header>
+
+        </header>
+        <div class="menu">
+                <ul>
+                    <li><a href="#"/><span class="link">Fizyka - gimnazjum</span></li>
+                    <li><span class="space">|</span></li>
+                    <li><a href="#"/><span class="link">Fizyka - szkoła średnia</span></li>
+                    <li><span class="space">|</span></li>
+                    <li><a href="#"/><span class="link">Astronomia - gimnazjum</span></li>
+                    <li><span class="space">|</span></li>
+                    <li><a href="#"/><span class="link">Astronomia - szkoła śrendnia</span></li>
+                    <li><span class="space">|</span></li>
+                    <li><a href="#"/><span class="link">Galeria</span></li>
+                    <li><span class="space">|</span></li>
+                    <li><a href="#"/><span class="link">Kontakt</span></li>
+                </ul>
+            </div>
+            <div class="cls"></div>
+    </div>
 </body>
 </html>
